--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,6 +3,21 @@
     <div class="aboutUs">
       <h2> About Us</h2>
       <p>
+
+        ASL Lingo was created from the idea that communication is essential for human connection. About 2 to 3 out of
+        every 1,000
+        children in the United States are born with a detectable level of hearing loss in one or both ears. More than 90
+        percent of deaf children are born to hearing parents. Approximately 15% of American adults (37.5 million) aged
+        18 and over report some trouble hearing. With the number of individuls who are hard of hearing in the United
+        States, it became a shock to us that American Sign Language isn't offered readily in most communities.
+
+        At ASL Lingo, we have set out to create an online community where individuls can learn American Sign Language
+        and become immersed in a world where they can learn at their own speed, while also having a community that feels
+        like a safe space to share triumphs and defeats, both in learning and life. ASL Lingo aside from a learning
+        platform, is a space where our members feel seen and heard, with the goal of spreading that into their outside
+        communities.
+
+        Welcome! We hope you enjoy our platform as it evolves and grows, as we all do.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus eveniet sint ex ratione laborum dicta ipsa
         adipisci eaque minima accusantium cupiditate illum nisi veniam natus dolores, hic quidem nulla cum, est numquam
         nobis minus? Enim molestias minus dolor suscipit dolorem pariatur similique iste, reiciendis, quia vitae quo
