--- a/views/dictionary.ejs
+++ b/views/dictionary.ejs
@@ -11,7 +11,7 @@
 
     <br>
 
-    <div class="grid-container">
+    <div class="grid-container" id="gridContainer">
       <div class="grid-item"><img src="./letters/a.png" alt="a"></div>
       <div class="grid-item"><img src="./letters/b.png" alt="b"></div>
       <div class="grid-item"><img src="./letters/c.png" alt="c"></div>
