--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
     </main>
 
 
-    <div>
+    <!-- <div>
         <section id="section1">
             <h1>The world’s #1 way to learn American Sign Language</h1>
         </section>
@@ -50,6 +50,6 @@
                 </div>
             </section>
         </div>
-    </div>
+    </div> -->
 
     <%- include('partials/footer') -%>
