--- a/public/css/liveTranslation.css
+++ b/public/css/liveTranslation.css
@@ -70,7 +70,7 @@ footer{
     width: 82%;
     display: flex;
     margin: 0 auto;
-    border-radius: 8px;
+    border-radius: 23px;
     background-color: rgb(255 255 255 / 70%);
 
 }
@@ -112,4 +112,16 @@ body{
   flex-direction: column;
   margin: 0px 140px;
   margin-top: 20px;
+}
+.textToSignBtn{
+  border-radius: 16px;
+  background-color: rgb(150 157 255 / 45%);
+    height: 35px;
+    width: 113px;
+    margin-left: 7px;
+    opacity: 93%;
+}
+#text{
+  border-radius: 8px;
+    padding-left: 7px;
 }
