--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,10 @@
 <footer>
     <div class="footer-container">
         <div class="layout-container">
-            <div class="footer-header">
+            <!-- <div class="footer-header">
                 <h2>Learn American Sign Language with ASL Lingo</h2>
                 <a href="/signup" class="btn btn-primary my-3">Get Started</a>
-            </div>
+            </div> -->
             <div class="footer-links">
                 <a href="">About Us</a>
                 <a href="">Contact</a>
