--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,17 +5,17 @@
       <div class="main-content">
         <h1>Welcome Back!</h1>
         <img src="/imgs/giphy.gif" alt="image">
-        <h2>Remember to check in with the other members of the ASL Lingo Community below!</h2>
+        <h2 class="introTitle">Remember to check in with the other members of the ASL Lingo Community below!</h2>
 
       </div>
-      <div class="main-message">
+      <!-- <div class="main-message">
         <p class="introBlurb">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, vitae, hic,
           doloribus dolorem nulla
           modi exercitationem est laboriosam aperiam delectus odio itaque impedit aliquid repellendus dignissimos qui
           repudiandae? Eum incidunt ex cupiditate. Minus, saepe soluta reprehenderit ipsam sint, mollitia nam
           consequatur tenetur dolorem cupiditate quis deserunt laudantium voluptas. Corrupti, possimus.</p>
 
-      </div>
+      </div> -->
     </div>
 
     <div class="mt-5">
