--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -91,7 +91,7 @@ footer{
 }
 
 .list-unstyled{
-  margin-bottom: 75px;
+  margin-bottom: 120px;
   background: white;
   opacity: 90%;
 }
@@ -104,4 +104,15 @@ footer{
 }
 .mt-5{
   margin: 0 200px;
+  margin-bottom: 24px;
+}
+.main-container{
+  margin-top: 20px;
+}
+.introTitle{
+  margin: 0 121px;
+  text-align: center;
+}
+.img-fluid{
+  height: 218px;
 }
